--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -1092,6 +1092,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# StoreType contient 4 modalités nous allons les remplacer par 1, 2, 3 et 4\n",
     "store['StoreType'] = store['StoreType'].map({'a':1,'b':2,'c':3,'d':4})"
    ]
   },
@@ -1112,6 +1113,7 @@
     }
    ],
    "source": [
+    "# Nous avons également 3 assortiments de produits nous les remplaçons par 0, 1 et 2\n",
     "store['Assortment'].unique()"
    ]
   },
@@ -1142,6 +1144,7 @@
     }
    ],
    "source": [
+    "# les intervalles de promotion seront également remplacés dans l'ordre par 0, 1, 2\n",
     "store['PromoInterval'].unique()"
    ]
   },
@@ -2090,245 +2093,6 @@
     "store_test['jr sem'] = store_test['Date'].dt.week\n",
     "\n",
     "store_test.drop('Open', axis = 1).head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>StoreType</th>\n",
-       "      <th>Assortment</th>\n",
-       "      <th>CompetitionDistance</th>\n",
-       "      <th>CompetitionOpenSinceMonth</th>\n",
-       "      <th>CompetitionOpenSinceYear</th>\n",
-       "      <th>Promo2</th>\n",
-       "      <th>Promo2SinceWeek</th>\n",
-       "      <th>Promo2SinceYear</th>\n",
-       "      <th>PromoInterval</th>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>Customers</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>Promo</th>\n",
-       "      <th>StateHoliday</th>\n",
-       "      <th>SchoolHoliday</th>\n",
-       "      <th>Id</th>\n",
-       "      <th>année</th>\n",
-       "      <th>mois</th>\n",
-       "      <th>jour</th>\n",
-       "      <th>jr sem</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-17</td>\n",
-       "      <td>4852</td>\n",
-       "      <td>519</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>303445</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>17</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2015-07-16</td>\n",
-       "      <td>4427</td>\n",
-       "      <td>517</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>324709</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>16</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2015-07-15</td>\n",
-       "      <td>4767</td>\n",
-       "      <td>550</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64663</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2015-07-14</td>\n",
-       "      <td>5042</td>\n",
-       "      <td>544</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>704685</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015-07-13</td>\n",
-       "      <td>5054</td>\n",
-       "      <td>553</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>308477</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store  StoreType  Assortment  CompetitionDistance  \\\n",
-       "0      1          3           0               1270.0   \n",
-       "1      1          3           0               1270.0   \n",
-       "2      1          3           0               1270.0   \n",
-       "3      1          3           0               1270.0   \n",
-       "4      1          3           0               1270.0   \n",
-       "\n",
-       "   CompetitionOpenSinceMonth  CompetitionOpenSinceYear  Promo2  \\\n",
-       "0                        9.0                    2008.0       0   \n",
-       "1                        9.0                    2008.0       0   \n",
-       "2                        9.0                    2008.0       0   \n",
-       "3                        9.0                    2008.0       0   \n",
-       "4                        9.0                    2008.0       0   \n",
-       "\n",
-       "   Promo2SinceWeek  Promo2SinceYear  PromoInterval  DayOfWeek       Date  \\\n",
-       "0              0.0           2011.0              0          5 2015-07-17   \n",
-       "1              0.0           2011.0              0          4 2015-07-16   \n",
-       "2              0.0           2011.0              0          3 2015-07-15   \n",
-       "3              0.0           2011.0              0          2 2015-07-14   \n",
-       "4              0.0           2011.0              0          1 2015-07-13   \n",
-       "\n",
-       "   Sales  Customers  Open  Promo  StateHoliday  SchoolHoliday      Id  année  \\\n",
-       "0   4852        519     1      1             0              0  303445   2015   \n",
-       "1   4427        517     1      1             0              0  324709   2015   \n",
-       "2   4767        550     1      1             0              0   64663   2015   \n",
-       "3   5042        544     1      1             0              0  704685   2015   \n",
-       "4   5054        553     1      1             0              0  308477   2015   \n",
-       "\n",
-       "   mois  jour  jr sem  \n",
-       "0     7    17       4  \n",
-       "1     7    16       3  \n",
-       "2     7    15       2  \n",
-       "3     7    14       1  \n",
-       "4     7    13       0  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "store_train.head()"
    ]
   }
  ],
